--- a/include/config.h.in
+++ b/include/config.h.in
@@ -2,7 +2,7 @@
 #define CONFIG_H_IN
  
 #define coeff @coeff@f
-#define mass @mass@
+#define mass @mass@f
 #define nmesh @nmesh@
  
 #endif // CONFIG_H_IN
